--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^5.1.2",
+    "react-router-cache-route": "^1.12.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "@vitejs/plugin-react": "^1.0.7",
@@ -27,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "less": "^4.1.2",
     "prettier": "^2.5.1",
+    "ts-import-plugin": "^2.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
