--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd-mobile": "^5.0.0-beta.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.1.2",
-    "react-router-cache-route": "^1.12.1"
+    "react-router-cache-route": "^1.12.1",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.5",
@@ -27,6 +28,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "hooooks": "^1.5.2",
     "less": "^4.1.2",
     "prettier": "^2.5.1",
     "ts-import-plugin": "^2.0.0",
