--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "antd-mobile": "^5.0.0-beta.20",
+    "antd-mobile-icons": "^0.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-cache-route": "^1.12.1",
